--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+.navigation link {
+    font-size: 12px;
+    font-family: sans-serif;
+}
 h1 {
-    font-family: Helvetica;
+    font-family: sans-serif;
 }
