added styled footer

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
+html {
+    height: 100%;
+}
+
+body {
+  display: flex;
+  min-height: 100%;
+  flex-direction: column;
+}
+
+.main-content {
+    flex: 1;
+}
+
 nav {
     padding: 5px;
 }
@@ -18,4 +32,9 @@ nav {
 h1, h2, h3, h4, h5, h6 {
     font-family: sans-serif;
     padding: 2px;
+}
+
+footer {
+    background-color: #eaedf2;
+    border-radius: 5px;
 }
