--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ nav {
 
 .navigation-link {
     font-size: 16px;
-    font-family: sans-serif;
+    font-family: "Roboto", sans-serif;
     color: dimgray;
     text-decoration: none;
     padding: 10px;
@@ -30,8 +30,17 @@ nav {
 }
 
 h1, h2, h3, h4, h5, h6, p {
-    font-family: sans-serif;
+    font-family: "Roboto", sans-serif;
     padding: 2px;
+}
+
+.body-content-container {
+    background: #eaedf2;
+    border-radius: 5px;
+}
+
+.content-heading {
+    padding: 5px;
 }
 
 footer {
