--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,40 @@
-html {
-    height: 100%;
+html, body {
+  width: 100vw;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  display: flex;
-  min-height: 100%;
-  flex-direction: column;
+    display: grid;
+    grid-template-columns: minmax(200px, 3fr) 9fr;
+    grid-template-rows: 150px auto 100px;
+    grid-template-areas: "header header"
+                         "nav    content"
+                         "nav    footer";
+
 }
 
 .main-content {
     flex: 1;
+    grid-area: content;
+}
+
+header {
+    grid-area: header;
 }
 
 nav {
     padding: 5px;
+    grid-area: nav;
+}
+
+.nav-list {
+    list-style-type: none;
+}
+
+.nav-list-item {
+    padding: 10px;
 }
 
 .navigation-link {
@@ -46,9 +67,10 @@ h1, h2, h3, h4, h5, h6, p {
 footer {
     background-color: #eaedf2;
     border-radius: 5px;
+    grid-area: footer;
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-around
+    justify-content: space-around;
 }
 
 .footer-content-container {
@@ -56,3 +78,4 @@ footer {
    padding: 20px;
    display: table-cell;
 }
+
