--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,11 @@ nav {
 
 h1, h2, h3, h4, h5, h6, p {
     font-family: "Roboto", sans-serif;
-    padding: 2px;
+    padding: 5px;
+}
+
+li {
+    font-family: "Roboto", sans-serif;
 }
 
 .body-content-container {
