--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ html, body {
 
 body {
     display: grid;
-    grid-template-columns: minmax(200px, 3fr) 9fr;
+    grid-template-columns: minmax(200px, 1.5fr) 9fr;
     grid-template-rows: 150px auto 100px;
     grid-template-areas: "header header"
                          "nav    content"
@@ -87,6 +87,29 @@ li {
 
 h3.project-heading {
     padding: 0px;
+}
+
+.project-links-container{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+}
+
+.project-link-container{
+    display: table-cell;
+}
+
+.project-link{
+    font-size: 16px;
+    font-family: "Roboto", sans-serif;
+    color: dimgray;
+    text-decoration: none;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.project-link:hover{
+    background-color: lightgrey;
 }
 
 footer {
