--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,25 @@ hr {
     max-height: 0px;
 }
 
+a:link {
+    color: grey;
+    text-decoration: none;
+}
+
+a:visited {
+    color:darkgrey;
+    text-decoration: none;
+}
+
+a:active {
+    color:darkgrey;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 .navigation-link {
     font-size: 16px;
     font-family: "Roboto", sans-serif;
@@ -94,27 +113,27 @@ li {
     display: table-cell;
 }
 
-.project-container {
+.content-container {
     background-color: #eaedf2;
     padding: 10px;
     border-radius: 5px;
 }
 
-h3.project-heading {
+h3.content-heading {
     padding: 0px;
 }
 
-.project-links-container{
+.content-links-container{
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
 }
 
-.project-link-container{
+.content-link-container{
     display: table-cell;
 }
 
-.project-link{
+.content-link{
     font-size: 16px;
     font-family: "Roboto", sans-serif;
     color: dimgray;
@@ -123,7 +142,7 @@ h3.project-heading {
     border-radius: 5px;
 }
 
-.project-link:hover{
+.content-link:hover{
     background-color: lightgrey;
 }
 
