--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     grid-template-rows: 150px auto 100px;
     grid-template-areas: "header header"
                          "nav    content"
-                         "nav    footer";
+                         "footer footer";
 
 }
 
