--- a/styles.css
+++ b/styles.css
@@ -5,29 +5,38 @@ html, body {
   padding: 0;
 }
 
-body {
-    display: grid;
-    grid-template-columns: minmax(200px, 1.5fr) 9fr;
-    grid-template-rows: 150px auto 100px;
-    grid-template-areas: "header header"
-                         "nav    content"
-                         "footer footer";
+@supports (display: grid){
+    body {
+        display: grid;
+        grid-template-columns: minmax(200px, 1.5fr) 9fr;
+        grid-template-rows: 150px auto 100px;
+        grid-template-areas: "header header"
+                             "nav    content"
+                             "footer footer";
+
+    }
+}
+
+@supports (display: grid){
+    .main-content {
+        flex: 1;
+        grid-area: content;
+        padding-bottom: 10px;
+    }
 
 }
 
-.main-content {
-    flex: 1;
-    grid-area: content;
-    padding-bottom: 10px;
+@supports (display: grid){
+    header {
+        grid-area: header;
+    }
 }
 
-header {
-    grid-area: header;
-}
-
-nav {
-    padding: 5px;
-    grid-area: nav;
+@supports (display: grid){
+    nav {
+        padding: 5px;
+        grid-area: nav;
+    }
 }
 
 .nav-list {
