--- a/css/style_large.css
+++ b/css/style_large.css
@@ -1,3 +1,82 @@
+* {
+    padding: 0;
+    margin: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+body {
+    font-size: 62.5%;
+    font-family: arial, sans-serif;
+    color: #221F51;
+}
+
+.wrapper {
+    font-size: 1.6em;
+    padding: .5em;
+    margin: 0 auto;
+    width: 100%;
+    background-color: white;
+}
+
+.sb-item {
+    height: 34px;
+    list-style: none;
+    margin-bottom: 21px;
+}
+
+.sb-icon-list {
+    margin-bottom: 60px;
+}
+
+.list-span {
+    display: inline-block;
+    padding-left: 15px;
+    padding-top: 8px;
+    font-size: 1.4em;
+}
+
+#social-title {
+    display: block;
+    border-bottom: 1px dashed #221F51;
+    width: 143px;
+    padding-bottom: 5px;
+    margin-bottom: 10px;
+}
+
+.social-icons {
+    padding-right: 7px;
+}
+
+aside {
+    float: left;
+    margin-right: 35px;
+}
+
+main {
+   float: right;
+}
+
+.experience-block {
+   display: -webkit-flex;
+   display: flex;
+   -webkit-flex-direction: row;
+   flex-direction: row;
+}
+
+.experience {
+    display: inline-block;
+    width: 100%;
+    margin-right: 16px;
+}
+
+.experience-title {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+/*
 html, body {
   width: 100vw;
   min-height: 100vh;
@@ -5,7 +84,6 @@ html, body {
   padding: 0;
 }
 
-/* If the browser supports CSS Grid */
 
 @supports (display: grid){
     body {
@@ -41,45 +119,48 @@ html, body {
     }
 }
 
-/* If the browser window is small */
-
-@media only and (max-device-width: 480px){
-    .hamburger-menu {
-        display: inline-block;
-        cursor: pointer;
-    }
-
-    .burger-bar-1, .burger-bar-2, .burger-bar-3 {
-        width: 35px;
-        height: 5px;
-        background-color: #333;
-        margin: 6px 0;
-        transition: 0.4s;
-    }
-
-    .change-burger .burger-bar-1 {
-        -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
-        transform: rotate(-45deg) translate(-9px, 6px) ;
-    }
-
-    .change-burger .burger-bar-2 {
-        opacity: 0;
-    }
-
-    .change-burger .burger-bar-3 {
-        -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
-        transform: rotate(45deg) translate(-8px, -8px) ;
-    }
-
-    
+#menu {
+    cursor: pointer; 
+    padding: 10px 35px 16px 0px;
 }
 
-/* Hide the burger menu if the user is on a desktop 
-   Might want to change this in future
-*/
+#menu span, #menu span:before, #menu span:after {
+  cursor: pointer;
+  border-radius: 1px;
+  height: 5px;
+  width: 35px;
+  background: black;
+  position: absolute;
+  display: block;
+  content: '';
+}
 
-.hamburger-menu {
-    display: none;
+#menu span:before {
+  top: -10px; 
+}
+
+#menu span:after {
+  bottom: -10px;
+}
+
+#menu span, #menu span:before, #menu span:after {
+  transition: all 500ms ease-in-out;
+}
+
+#menu.active span {
+  background-color: transparent;
+}
+
+#menu.active span:before, #menu.active span:after {
+  top: 0;
+}
+
+#menu.active span:before {
+  transform: rotate(45deg);
+}
+
+#menu.active span:after {
+  transform: rotate(-45deg);
 }
 
 .nav-list {
@@ -201,4 +282,4 @@ footer {
    padding: 20px;
    display: table-cell;
 }
-
+*/
