--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>{{ page.title }} | Robert Nixon</title>
 
 {% seo %}
 
@@ -16,7 +17,13 @@
     <div class="wrapper">
       <header>
         <a href="{{ site.github.url }}"> <h1>Robert Nixon</h1> </a>
-        <p>Personal Website</p>
+        <h3>Personal Website</h3>
+
+        <ul>
+          <li><a href="/projects/">Projects</a></li>
+          <li><a href="/politics/">Politics</a></li>
+          <li>Donwload latest CV</li>
+        </ul>
 
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
@@ -26,7 +33,7 @@
           <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
 
-        <p class="view"><a href="#">View my Linkedin page</a></p>
+        <p class="view"><a href="https://www.linkedin.com/in/prorobertnixon/">View my Linkedin page</a></p>
       </header>
       <section>
 
