--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         <ul>
           <li><a href="/projects/">Projects</a></li>
           <li><a href="/politics/">Politics</a></li>
-          <li>Donwload latest CV</li>
+          <li><a href="/docs/CVRobertNixonLatest.pdf">Donwload latest CV</a></li>
         </ul>
 
         {% if site.github.is_project_page %}
