added experience page link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,9 +20,10 @@
         <h3>Personal Website</h3>
 
         <ul>
+          <li><a href="/experience/">Experience</a></li>
           <li><a href="/projects/">Projects</a></li>
           <li><a href="/politics/">Politics</a></li>
-          <li><a href="/docs/CVRobertNixonLatest.pdf">Donwload latest CV</a></li>
+          <li><a href="/docs/CVRobertNixonLatest.pdf">Donwload CV</a></li>
         </ul>
 
         {% if site.github.is_project_page %}
