--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,9 @@
           <li><a href="/experience/">Experience</a></li>
           <li><a href="/projects/">Projects</a></li>
           <li><a href="/politics/">Politics</a></li>
-          <li><a href="/docs/CVRobertNixonLatest.pdf">Donwload CV</a></li>
         </ul>
+
+        <p class="view"><a href="/docs/CVRobertNixonLatest.pdf">Donwload CV</a></p>
 
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
