modified header links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,15 +27,9 @@
 
         <p class="view"><a href="/docs/CVRobertNixonLatest.pdf">Donwload CV</a></p>
 
-        {% if site.github.is_project_page %}
-          <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
-        {% endif %}
+        <p class="view"><a href="{{ site.github.owner_url }}">GitHub Profile</a></p>
 
-        {% if site.github.is_user_page %}
-          <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
-
-        <p class="view"><a href="https://www.linkedin.com/in/prorobertnixon/">View my Linkedin page</a></p>
+        <p class="view"><a href="https://www.linkedin.com/in/prorobertnixon/">Linkedin page</a></p>
       </header>
       <section>
 
