--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,11 +25,12 @@
           <li><a href="/politics/">Politics</a></li>
         </ul>
 
-        <p class="view"><a href="/docs/CVRobertNixonLatest.pdf">Donwload CV</a></p>
-
-        <p class="view"><a href="{{ site.github.owner_url }}">GitHub Profile</a></p>
-
-        <p class="view"><a href="https://www.linkedin.com/in/prorobertnixon/">Linkedin page</a></p>
+        <ul>
+          <li><a href="/docs/CVRobertNixonLatest.pdf">Donwload CV</a></li>
+          <li><a href="{{ site.github.owner_url }}">Github</a></li>
+          <li><a href="https://www.linkedin.com/in/prorobertnixon/">Linkedin</a></li>
+        </ul>
+        </p>
       </header>
       <section>
 
