added contact details

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,12 @@
           <li><a href="{{ site.github.owner_url }}">Github</a></li>
           <li><a href="https://www.linkedin.com/in/prorobertnixon/">Linkedin</a></li>
         </ul>
+
+	<h4>Contact Me</h4>
+	<ul>
+	  <li><a href="mailto:robertnixon59@gmail.com">Email me</a></li>
+	  <li><a href="https://twitter.com/robertnixongp">Twitter</a></li>
+	</ul>
         </p>
       </header>
       <section>
