updated contact details

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,9 @@
 
 	<h4>Contact Me</h4>
 	<ul>
-	  <li><a href="mailto:robertnixon59@gmail.com">Email me</a></li>
-	  <li><a href="https://twitter.com/robertnixongp">Twitter</a></li>
+	  <li><a href="mailto:robertnixon59@gmail.com">Via Email</a></li>
+	  <li><a href="https://twitter.com/robertnixongp">Via Twitter</a></li>
+	  <li><a href="https://www.facebook.com/robert.nixon.9237">Via Facebook</a></li>
 	</ul>
         </p>
       </header>
