--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 	<h4>Contact Me</h4>
 	<ul>
 	  <li><a href="mailto:robertnixon59@gmail.com">Via Email</a></li>
-	  <li><a href="https://twitter.com/robertnixongp">Via Twitter</a></li>
+	  <li><a href="https://twitter.com/_robertjnixon">Via Twitter</a></li>
 	  <li><a href="https://www.facebook.com/robert.nixon.9237">Via Facebook</a></li>
 	</ul>
         </p>
