--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,13 +20,7 @@
         <h3>Personal Website</h3>
 
         <ul>
-          <li><a href="/experience/">Experience</a></li>
-          <li><a href="/projects/">Projects</a></li>
-          <li><a href="/politics/">Politics</a></li>
-        </ul>
-
-        <ul>
-          <li><a href="/docs/CVRobertNixonLatest.pdf">Donwload CV</a></li>
+          <li><a href="/cv/">View CV</a></li>
           <li><a href="{{ site.github.owner_url }}">Github</a></li>
           <li><a href="https://www.linkedin.com/in/prorobertnixon/">Linkedin</a></li>
         </ul>
