update facebook link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 	<ul>
 	  <li><a href="mailto:robert@robertnixon.net">Via Email</a></li>
 	  <li><a href="https://twitter.com/_robertjnixon">Via Twitter</a></li>
-	  <li><a href="https://www.facebook.com/robert.nixon.9237">Via Facebook</a></li>
+	  <li><a href="https://www.facebook.com/the.robert.j.nixon">Via Facebook</a></li>
 	</ul>
         </p>
       </header>
