--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         <ul>
           <li><a href="/cv/">View CV</a></li>
           <li><a href="{{ site.github.owner_url }}">Github</a></li>
-          <li><a href="https://www.linkedin.com/in/prorobertnixon/">Linkedin</a></li>
+          <li><a href="https://www.linkedin.com/in/robertjosephnixon/">LinkedIn</a></li>
         </ul>
 
 	<h4>Contact Me</h4>
