--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,16 +21,22 @@
 
         <ul>
           <li><a href="/cv/">View CV</a></li>
-          <li><a href="{{ site.github.owner_url }}">Github</a></li>
+          <li><a href="#">Detailed Portfolio</a></li>
           <li><a href="https://www.linkedin.com/in/robertjosephnixon/">LinkedIn</a></li>
         </ul>
 
-	<h4>Contact Me</h4>
-	<ul>
-	  <li><a href="mailto:robert@robertnixon.net">Via Email</a></li>
-	  <li><a href="https://twitter.com/_robertjnixon">Via Twitter</a></li>
-	  <li><a href="https://www.facebook.com/the.robert.j.nixon">Via Facebook</a></li>
-	</ul>
+        <ul>
+          <li><a href="{{ site.github.owner_url }}">GitHub</a></li>
+          <li><a href="https://bitbucket.org/robertjnixon/">Bitbucket</a></li>
+          <li><a href="/politics/">Politics</a></li>
+        </ul>
+
+        <h4>Contact Me</h4>
+        <ul>
+          <li><a href="mailto:robert@robertnixon.net">Via Email</a></li>
+          <li><a href="https://twitter.com/_robertjnixon">Via Twitter</a></li>
+          <li><a href="https://www.facebook.com/the.robert.j.nixon">Via Facebook</a></li>
+        </ul>
         </p>
       </header>
       <section>
