added portfolio; edit template links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,14 +21,14 @@
 
         <ul>
           <li><a href="/cv/">View CV</a></li>
-          <li><a href="#">Detailed Portfolio</a></li>
-          <li><a href="https://www.linkedin.com/in/robertjosephnixon/">LinkedIn</a></li>
+          <li><a href="/portfolio/">View Portfolio</a></li>
+          <li><a href="https://www.linkedin.com/in/robertjosephnixon/">LinkedIn Profile</a></li>
         </ul>
 
         <ul>
-          <li><a href="{{ site.github.owner_url }}">GitHub</a></li>
+          <li><a href="{{ site.github.owner_url }}">GitHub Profile</a></li>
           <li><a href="https://bitbucket.org/robertjnixon/">Bitbucket</a></li>
-          <li><a href="/politics/">Politics</a></li>
+          <li><a href="/politics/">Political Activities</a></li>
         </ul>
 
         <h4>Contact Me</h4>
