--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,10 @@
           <li><a href="/politics/">Political Activities</a></li>
         </ul>
 
+        <ul>
+          <li><a href="/anki/">Anki Cards</a></li>
+        </ul>
+
         <h4>Contact Me</h4>
         <ul>
           <li><a href="mailto:robert@robertnixon.net">Via Email</a></li>
