--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,28 +19,41 @@
         <a href="{{ site.github.url }}"> <h1>Robert Nixon</h1> </a>
         <h3>Personal Website</h3>
 
+		<h4>Professional</h4>
         <ul>
           <li><a href="/cv/">View CV</a></li>
           <li><a href="/portfolio/">View Portfolio</a></li>
           <li><a href="https://www.linkedin.com/in/robertjosephnixon/">LinkedIn Profile</a></li>
         </ul>
 
-        <ul>
-          <li><a href="{{ site.github.owner_url }}">GitHub Profile</a></li>
+		<ul>
+		  <li><a href="{{ site.github.owner_url }}">GitHub Profile</a></li>
           <li><a href="https://bitbucket.org/robertjnixon/">Bitbucket</a></li>
+		</ul>
+
+		<h4>Green Party</h4>
+        <ul>
           <li><a href="/politics/">Political Activities</a></li>
+		  <li><a href="https://nogp.org.uk">North Oxon Greens</a></li>
+		  <li><a href="https://greenoxfordshire.com">Oxon Greens</a></li>
         </ul>
 
-        <ul>
-          <li><a href="/anki/">Anki Decks</a></li>
-          <li><a href="https://doodle.com/robertnixon">MeetMe</a></li>
-        </ul>
+		
 
         <h4>Contact Me</h4>
         <ul>
           <li><a href="mailto:robert@robertnixon.net">Via Email</a></li>
           <li><a href="https://twitter.com/_robertjnixon">Via Twitter</a></li>
           <li><a href="https://www.facebook.com/the.robert.j.nixon">Via Facebook</a></li>
+        </ul>
+
+		<ul>
+		  <li><a href="https://doodle.com/robertnixon">MeetMe</a></li>
+		</ul>
+
+		<h4>Other</h4>
+        <ul>
+          <li><a href="/anki/">Anki Decks</a></li>
         </ul>
         </p>
       </header>
