update home content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,10 +35,8 @@
         <ul>
           <li><a href="/politics/">Political Activities</a></li>
 		  <li><a href="https://nogp.org.uk">North Oxon Greens</a></li>
-		  <li><a href="https://greenoxfordshire.com">Oxon Greens</a></li>
+		  <li><a href="https://www.greenoxfordshire.com">Oxon Greens</a></li>
         </ul>
-
-		
 
         <h4>Contact Me</h4>
         <ul>
