make blog site display posts by month + year

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,9 @@
         </ul>
         </p>
     </header>
+    <section>
       {{ content }}
+    </section>
     </div>
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
 
