--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
 
 		<h4>Other</h4>
         <ul>
-          <li><a href="/anki/">Anki Decks</a></li>
+          <li><a href="/blog/">Blog</a></li>
         </ul>
         </p>
     </header>
