--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 
 		<ul>
 		  <li><a href="/blog/">Blog</a></li>
-		  <li><a href="{{ site.github.owner_url }}">GitHub Profile</a></li>
+		  <li><a href="{{ site.github.owner_url }}">GitHub</a></li>
                   <li><a href="https://bitbucket.org/robertjnixon/">Bitbucket</a></li>
 		</ul>
 
